# UniProject-ImageConvolution

./: CMakeLists.txt  README.md  README.txt  lena  main.cpp
dglib/: exception.h  image.h  kernel.h  kernel_type.h  main.cpp  ppm.h
output_images/: BoxBlur.ppm  GaussianBlur_3x3.ppm  GaussianBlur_5x5.ppm  MediumEdgeDetection.ppm  Sharpen.ppm  StrongEdgeDetection.ppm  UnsharpMasking_5x5.ppm  WeakEdgeDetection.ppm
test/: CMakeLists.txt  run_all_test.cpp  test_image.cpp  test_image.ppm  test_image_beaver_BoxBlurred.ppm  test_image_invalid_magic_number.ppm  test_image_invalid_max_color_value.ppm  test_ppm.cpp
